Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-32365

detailize the semisync replication magic number error

    XMLWordPrintable

Details

    Description

      2023-10-02 12:31:43 1 [ERROR] Read semi-sync reply magic number error

      can be seen on the master side of a replication configuration which is not common though
      can appear as a result of not properly set proxy program in between of the master and a slave.
      An attempt to misuse the master side file descriptor could and should be addressed at least
      with printing down the hexdump of the magic number error's packet.

      Attachments

        Issue Links

          Activity

            People

              Elkin Andrei Elkin
              Elkin Andrei Elkin
              Votes:
              2 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.75d
                  0.75d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.