sql/semisync_master.cc
@@ -18,6 +18,8 @@
 
 #include <my_global.h>
 #include "semisync_master.h"
+#include <algorithm>
+#include <mysql_com.h>
 
 #define TIME_THOUSAND 1000
 #define TIME_MILLION  1000000
@@ -562,6 +564,8 @@ int Repl_semi_sync_master::report_reply_packet(uint32 server_id,
 
   DBUG_ENTER("Repl_semi_sync_master::report_reply_packet");
 
+  DBUG_EXECUTE_IF("semisync_corrupt_magic",
+                  const_cast<uchar*>(packet)[REPLY_MAGIC_NUM_OFFSET]= 0;);
   if (unlikely(packet[REPLY_MAGIC_NUM_OFFSET] !=
                Repl_semi_sync_master::k_packet_magic_num))
   {
@@ -593,9 +597,18 @@ int Repl_semi_sync_master::report_reply_packet(uint32 server_id,
 
   rpl_semi_sync_master_get_ack++;
   report_reply_binlog(server_id, log_file_name, log_file_pos);
+  result= 0;
 
 l_end:
+  if (result == -1)
+  {
+    char buf[256];
+    octet2hex(buf, (const char*) packet, std::min(static_cast<ulong>(sizeof(buf)-1),
+                                                  packet_len));
+    sql_print_information("First bytes of the packet from semisync slave "
+                          "server-id %d: %s", server_id, buf);
 
+  }
   DBUG_RETURN(result);
 }
 
